src/app/views/oneThirdScreen/oneThirdScreen.component.scss
/* ... */
@-moz-keyframes text {
    0% {
        opacity: 0;
    }
    25% {
        opacity: 0.4;
    }
    50% {
        opacity: 0.7;
    }
    90% {
        opacity: 1;
    }
    100% {
        opacity: 2;
    }
}

@-webkit-keyframes text {
    0% {
        opacity: 0;
    }
    25% {
        opacity: 0.4;
    }
    50% {
        opacity: 0.7;
    }
    90% {
        opacity: 1;
    }
    100% {
        opacity: 2;
    }
}

@keyframes text {
    0% {
        opacity: 0;
    }
    25% {
        opacity: 0.4;
    }
    50% {
        opacity: 0.7;
    }
    90% {
        opacity: 1;
    }
    100% {
        opacity: 2;
    }
}

%Animation {
    animation-name: blinker;
    animation-duration: 1s;
    animation-timing-function: linear;
    animation-iteration-count: 1;
    -webkit-animation-name: blinker;
    -webkit-animation-duration: 1s;
    -webkit-animation-timing-function: linear;
    -webkit-animation-iteration-count: 1;
}

.block_animation {
    @extend %Animation;
}

@-moz-keyframes blinker {
    0% {
        opacity: 1;
    }
    50% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

@-webkit-keyframes blinker {
    0% {
        opacity: 1;
    }
    50% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

@keyframes blinker {
    0% {
        opacity: 1;
    }
    50% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

// new css code
.timer_center {
    position: absolute;
    top: 58%;
    left: 39%;
    transform: translate(-50%, -50%);
    // width: 30%;
}

.timeout_center {
    position: absolute;
    top: 54%;
    left: 38%;
    transform: translate(-50%, -50%);
}

.cube_img_center {
    position: absolute;
    top: 54%;
    left: 45%;
    transform: translate(-50%, -50%);
    width: 180%;
    /*   min-width: 600px; */
}

.hint_ans_center {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 100%;
}

.timer {
    position: absolute;
    text-shadow: 3px 4px 3px #333333;
    color: #ffffff;
    text-align: center;
    margin-top: 2%;
}

.timer_style {
    position: absolute;
    color: #f00;
    width: 111px;
    text-align: center;
    text-shadow: 3px 4px 3px #333333;
    font-weight: bold;
}

.blue_bg {
    width: auto;
    background: url(../../../assets/images/blue_bg.png) no-repeat;
    background-size: cover;
    display: inline-block;
    min-height: 60px;
    position: relative;
    padding: 0;
    min-width: 86px;
}

.green_bg {
    width: auto;
    background: url(../../../assets/images/green_bg.png) no-repeat;
    background-size: cover;
    display: inline-block;
    min-height: 60px;
    position: relative;
    padding: 0;
    min-width: 86px;
}

// Adjust blue rectangle hint row alignment
.mleft40 {
    margin-left: 40px;
}

//* text in green capsule
@for $fontLength from 1 through 100 {
    @if $fontLength>=11 {
        .clue_fontsize#{$fontLength} {
            font-size: 20px;
        }
    }
    @else if $fontLength<=10 {
        .clue_fontsize#{$fontLength} {
            font-size: 30px;
        }
    }
    @media (min-width: 1601px) and (max-width: 1980px) {
        @if $fontLength>=11 {
            .clue_fontsize#{$fontLength} {
                font-size: 30px !important;
                width: 280px !important;
            }
        }
        @else if $fontLength==8 {
            .clue_fontsize#{$fontLength} {
                font-size: 40px !important;
                width: 280px !important;
                /* left: 44% !important; */
            }
        }
        @else if $fontLength<=10 {
            .clue_fontsize#{$fontLength} {
                font-size: 37px !important;
                width: 270px !important;
                /*     left: 46% !important; */
            }
        }
    }
    @media (min-width: 2880px) and (max-width: 3999px) {
        @if $fontLength>=11 {
            .clue_fontsize#{$fontLength} {
                font-size: 40px !important;
                width: 400px !important;
            }
        }
        @else if $fontLength==8 {
            .clue_fontsize#{$fontLength} {
                font-size: 56px !important;
                width: 370px !important;
                left: 44% !important;
            }
        }
        @else if $fontLength<=10 {
            .clue_fontsize#{$fontLength} {
                font-size: 70px !important;
                width: 370px !important;
                left: 46% !important;
            }
        }
    }
    @media only screen and (min-width: 4000px) {
        @if $fontLength>=11 {
            .clue_fontsize#{$fontLength} {
                font-size: 75px !important;
                width: 700px !important;
            }
        }
        @else if $fontLength<=10 {
            .clue_fontsize#{$fontLength} {
                font-size: 100px !important;
                width: 370px !important;
                left: 46% !important;
            }
        }
    }
}

//* End of text in green capsule
//word responsive one third 
@for $p from 1 through 45 {
    @if $p>=41 {
        .word_font#{$p} {
            padding-top: 5px !important;
        }
    }
}
/* ... */

